--- a/BusStop/src/main/webapp/css/busstop/busstop.css
+++ b/BusStop/src/main/webapp/css/busstop/busstop.css
@@ -204,7 +204,10 @@ table .trTable .memList td .no{
 	padding: 0 5px;    
 	margin-right: 1rem;
 }
-
+.no:hover{
+	color: gray;
+	cursor: pointer;
+}
 #baseLayer {
 	right: 10px;
 	top: 10px;
